# ur5e_moveit_cpp

./: README.md
src/ur5e_moveit_cpp/: CMakeLists.txt  package.xml
src/ur5e_moveit_cpp/data/toolpaths/: front_raster.csv
src/ur5e_moveit_cpp/data/toolpaths/saddle/: raster_22_5_deg.csv  raster_45_deg.csv  raster_67_5_deg.csv  raster_along_x.csv
src/ur5e_moveit_cpp/meshes/saddle/: saddle_block_100x100.stl
src/ur5e_moveit_cpp/src/: add_mesh_collision_object.cpp  check_surface_toolpath_ik.cpp  plan_execute_surface_toolpath.cpp  plan_surface_toolpath.cpp
src/ur5e_perception/: CMakeLists.txt  package.xml
src/ur5e_perception/src/: object_measurement.cpp  pointcloud_preprocessor.cpp  table_object_segmenter.cpp
